[gd_scene load_steps=5 format=2]

[ext_resource path="res://nodes/menus/MainMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://nodes/menus/PauseMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://nodes/menus/HelpMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/App.gd" type="Script" id=4]

[node name="App" type="Node"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" parent="CanvasLayer" instance=ExtResource( 1 )]

[node name="HelpMenu" parent="CanvasLayer" instance=ExtResource( 3 )]
visible = false

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource( 2 )]
visible = false

[connection signal="ready" from="." to="." method="main_menu"]
[connection signal="exit" from="CanvasLayer/MainMenu" to="." method="exit"]
[connection signal="help_menu" from="CanvasLayer/MainMenu" to="." method="help_menu"]
[connection signal="play_game" from="CanvasLayer/MainMenu" to="." method="play_game"]
[connection signal="main_menu" from="CanvasLayer/HelpMenu" to="." method="main_menu"]
[connection signal="main_menu" from="CanvasLayer/PauseMenu" to="." method="main_menu"]
